padding-bottom on pages to ensure buttons always show up on mobile.

--- a/src/components/Easter/Easter.module.css
+++ b/src/components/Easter/Easter.module.css
@@ -9,6 +9,7 @@
   text-align: center;
   overflow: auto;
   padding: 0 10px;
+  padding-bottom: 75px;
 }
 
 .container > div:last-child {
