--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -18,6 +18,7 @@
   text-align: center;
   overflow: auto;
   padding: 0 10px;
+  padding-bottom: 75px;
 }
 
 .row > div:last-child {
